--- a/src/directive/loading/loading.css
+++ b/src/directive/loading/loading.css
@@ -23,7 +23,7 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  border: 4px solid purple;
+  border: 4px solid #409eff;
   border-left-color: transparent;
   animation: custom-loading-rotate 1s linear infinite;
   position: absolute;
