--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -40,7 +40,7 @@ q:before, q:after { content: ''; }
 
 /* 重置表单元素 */
 legend { color: #000; } /* for ie6 */
-fieldset, img { border: none; } /* img 搭车：让链接里的 img 无边框 */
+fieldset, img { border: none; vertical-align: middle; } /* img 搭车：让链接里的 img 无边框 */
 /* 注：optgroup 无法扶正 */
 button, input, select, textarea {
     font-size: 100%; /* 使得表单元素在 ie 下能继承字体大小 */
