--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,6 +3,8 @@
 @import './mixin.scss';
 @import './transition.scss';
 
+html, body { scroll-behavior:smooth; }
+
 body {
   height: 100%;
   -moz-osx-font-smoothing: grayscale;
