--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,7 +3,10 @@
 @import './mixin.scss';
 @import './transition.scss';
 
-html, body { scroll-behavior:smooth; }
+html,
+body {
+  scroll-behavior:smooth;
+}
 
 body {
   height: 100%;
