--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,12 +1,8 @@
-@import './reset.scss';
 @import './variables.scss';
 @import './mixin.scss';
 @import './transition.scss';
 
-html,
-body {
-  scroll-behavior:smooth;
-}
+html, body { scroll-behavior:smooth; }
 
 body {
   height: 100%;
@@ -14,6 +10,10 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+}
+
+img {
+  vertical-align: middle;
 }
 
 label {
@@ -25,7 +25,7 @@ html {
   box-sizing: border-box;
 }
 
-#app{
+#app {
   height: 100%;
 }
 
@@ -44,7 +44,7 @@ a:hover {
   text-decoration: none;
 }
 
-div:focus{
+div:focus {
   outline: none;
 }
 
